[package]
name = "zkwasmer"
license = "MIT AND Apache-2.0"
keywords = ["zk", "zkSNARK", "wasm"]
repository = "https://github.com/Riemannstein/zkWasmer"
homepage = "https://github.com/Riemannstein/zkWasmer"
description = "A zk-friendly virtual machine for WebAssembly"
version = "0.0.1"
edition = "2021"

[dependencies]
wasmer = "2"
